@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-22T01:44:47Z",
+  "timestamp" : "2022-04-22T16:28:14Z",
   "count_outdated" : 1770,
   "uniques_outdated" : 328,
-  "count" : 1817,
-  "uniques" : 357,
+  "count" : 1818,
+  "uniques" : 358,
   "clones" : [
     {
       "timestamp": "2022-04-09T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 6, 7 ],
       "uniques": 5,
       "uniques_minmax": [ 4, 5 ]
+    },
+    {
+      "timestamp": "2022-04-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
