@@ -1,5 +1,5 @@
 {
-  "count": 47,
+  "count": 48,
   "uniques": 18,
   "clones": [
     {
@@ -36,6 +36,11 @@
       "timestamp": "2022-04-21T00:00:00Z",
       "count": 7,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-04-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
